Breaking the lines using fill-paragraph.

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -59,19 +59,65 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}\label{intro}
 
-Two aspects of programming language research are relevant for this project. The first is concerned with static type systems for ensuring runtime safety properties for concurrent communication systems. The second is the increasing use of proof assistants and interactive theorem provers for studying and mechanically verifying the semantics and properties of programming languages.
+Two aspects of programming language research are relevant for this
+project. The first is concerned with static type systems for ensuring runtime
+safety properties for concurrent communication systems. The second is the
+increasing use of proof assistants and interactive theorem provers for
+studying and mechanically verifying the semantics and properties of
+programming languages.
 
 \subsection{On Communication}
 
-Distributed communication systems are becoming increasingly prevalent in modern society. To facilitate communication between concurrently executing agents requires complex network protocols to define the type and sequencing of messages. Typically these protocols are implemented in systems programming languages, such as C, which provide no correctness guarantees of the implementation. Furthermore, programming in these languages is often extremely error-prone, as one has a myriad of unsafe features at one's disposal. As more businesses begin to conduct transactions over the Web, it is imperative that they can reason about the communication protocols upon which they rely.
+Distributed communication systems are becoming increasingly prevalent in
+modern society. To facilitate communication between concurrently executing
+agents requires complex network protocols to define the type and sequencing of
+messages. Typically these protocols are implemented in systems programming
+languages, such as C, which provide no correctness guarantees of the
+implementation. Furthermore, programming in these languages is often extremely
+error-prone, as one has a myriad of unsafe features at one's disposal. As more
+businesses begin to conduct transactions over the Web, it is imperative that
+they can reason about the communication protocols upon which they rely.
 
-Encoding communication protocols as \textit{session types} is one approach to achieve guarantees about correctness. One particular variant of session types are \textit{binary} session types~\footnote{There are also \textit{multiparty} session types, but I do not discuss them here.}. A binary session type specifies communication between two agents, and it specifies the order and type of messages to be sent or received by an agent in the system. The two agents have dual session types such that, for example, when one is expecting to receive a message the other is expecting to send a message; both session types agree on the type of message to be exchanged. In this way, correctness of communication can be statically assured by providing communicating agents with a \textit{channel} whose endpoints have dual session types. A channel is defined as a bi-directional conduit for exchanging messages, not unlike a socket in network programming. In contrast to sockets, however, a channel is associated with an explicit type which provides a description of its protocol. Thus, in session-based systems a channel is usually provided as a primitive type.
+Encoding communication protocols as \textit{session types} is one approach to
+achieve guarantees about correctness. One particular variant of session types
+are \textit{binary} session types~\footnote{There are also \textit{multiparty}
+ session types, but I do not discuss them here.}. A binary session type
+specifies communication between two agents, and it specifies the order and
+type of messages to be sent or received by an agent in the system. The two
+agents have dual session types such that, for example, when one is expecting
+to receive a message the other is expecting to send a message; both session
+types agree on the type of message to be exchanged. In this way, correctness
+of communication can be statically assured by providing communicating agents
+with a \textit{channel} whose endpoints have dual session types. A channel is
+defined as a bi-directional conduit for exchanging messages, not unlike a
+socket in network programming. In contrast to sockets, however, a channel is
+associated with an explicit type which provides a description of its
+protocol. Thus, in session-based systems a channel is usually provided as a
+primitive type.
 
 \subsection{On Verification}
 
-In programming language research, work on static type systems is usually presented on paper complete with informal proofs of correctness for the system properties. Most types systems in the session types community have been developed in this way. However, it is more difficult to extend work using this approach, as it may be unclear how changes affect proofs and one will typically have to re-consider all proofs to be convinced the properties still hold. More generally, unassisted formalisms are error-prone to develop and do not provide a firm basis upon which other researchers can experiment; often it will require ``rolling your own'' compiler for the language of interest.
+In programming language research, work on static type systems is usually
+presented on paper complete with informal proofs of correctness for the system
+properties. Most types systems in the session types community have been
+developed in this way. However, it is more difficult to extend work using this
+approach, as it may be unclear how changes affect proofs and one will
+typically have to re-consider all proofs to be convinced the properties still
+hold. More generally, unassisted formalisms are error-prone to develop and do
+not provide a firm basis upon which other researchers can experiment; often it
+will require ``rolling your own'' compiler for the language of interest.
 
-Proof assistants such as Coq~\cite{Coq:manual} offer a platform on which to develop programming languages and type systems and associated proofs of properties with strong guarantees of correctness. Not only is proving with a proof assistant much less error-prone than the unaided approach, it also eases extension of the system since the proof assistant will highlight parts of proofs that have been affected by changes. However, one may have to prove more properties using this approach since this setting does not permit appealing to human intuition. For example, alpha-equivalence and freshness of binders are usually assumed in informal presentations, whereas in the mechanised setting one has to explicitly encode and reason about these properties~\cite{Aydemir:2005:MMM, Aydemir:2008:EFM}.
+Proof assistants such as Coq~\cite{Coq:manual} offer a platform on which to
+develop programming languages and type systems and associated proofs of
+properties with strong guarantees of correctness. Not only is proving with a
+proof assistant much less error-prone than the unaided approach, it also eases
+extension of the system since the proof assistant will highlight parts of
+proofs that have been affected by changes. However, one may have to prove more
+properties using this approach since this setting does not permit appealing to
+human intuition. For example, alpha-equivalence and freshness of binders are
+usually assumed in informal presentations, whereas in the mechanised setting
+one has to explicitly encode and reason about these
+properties~\cite{Aydemir:2005:MMM, Aydemir:2008:EFM}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Statement of Problem}
@@ -85,13 +131,19 @@ mechanised framework for $\pi$-calculus type systems~\cite{Gay:2001:FFP}, I
 shift to the lambda calculus to provide a basis on which session types for
 mainstream programming languages can be studied, whilst taking advantage of
 previous proof effort and specialising only for those parts unique to the
-particular system. The framework will be heavily based on calculi developed by \citeauthor{Wadler:2012}~\cite{Wadler:2012} describing a relationship between classical linear logic (CP) and a functional language with session types (GV). GV is a minimal functional language supporting linearity so I believe such a basis will be general enough to support reasoning about a large class of functional languages with similar base properties.
+particular system. The framework will be heavily based on calculi developed by
+\citeauthor{Wadler:2012}~\cite{Wadler:2012} describing a relationship between
+classical linear logic (CP) and a functional language with session types
+(GV). GV is a minimal functional language supporting linearity so I believe
+such a basis will be general enough to support reasoning about a large class
+of functional languages with similar base properties.
 
-From this framework, a number of directions can be explored including
-session polymorphism session subtyping, and permitting different forms of
-aliasing within the type system. The recent work by \citeauthor{Lindley:2014:SAP} \cite{Lindley:2014:SAP}, who extend GV to HGV supporting session forwarding, replication and polymorphism, would be an interesting place to start when looking to add these extensions.
-
-%remove the adoption and focus stuff and add something about typestate
+From this framework, a number of directions can be explored including session
+polymorphism session subtyping, and permitting different forms of aliasing
+within the type system. The recent work by \citeauthor{Lindley:2014:SAP}
+\cite{Lindley:2014:SAP}, who extend GV to HGV supporting session forwarding,
+replication and polymorphism, would be an interesting place to start when
+looking to add these extensions.
 
 Additionally, the majority of previous session type systems for mainstream programming languages have focussed exclusively on linear type systems. One disadvantage of a linear type system is the need to re-bind objects after each operation~\cite{Gay:2010:LAST}. One could extend the GV type system to provide the benefits of aliasing with the guarantees of linearity which has been studied in several systems using a variety of alias control forms~\cite{Fahndrich:2002,Mazurak:2010:LLT,Tov:2011}. Another approach which has been utilised in previous session-based $\lambda$-calculus type systems, is to support side-effecting functions by allowing functions to close over channels in the environment~\cite{Gay:2003:STI,Vasconcelos:2006:TCM}. An interesting extension to the base GV type system would be to incorporate the closure semantics into the type system which would permit functions to modify session-typed channels in the environment. The typing rules would be similar to that described by \citeauthor{Gay:2010:MST} for typing expressions in an object-oriented setting for session types~\cite{Gay:2010:MST}, e.g. the rule for lambda abstraction could be:
 
