Finished read-through and update sections: just pictures left.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -128,22 +128,19 @@
  publisher = {Dept of Computing Science, University of Glasgow},
  year = {2003},
 }
-@inproceedings{Wadler:2012,
- author = {Wadler, Philip},
- title = {Propositions As Sessions},
- booktitle = {Proceedings of the 17th ACM SIGPLAN International Conference on Functional Programming},
- series = {ICFP '12},
- year = {2012},
- isbn = {978-1-4503-1054-3},
- location = {Copenhagen, Denmark},
- pages = {273--286},
- numpages = {14},
- url = {http://doi.acm.org/10.1145/2364527.2364568},
- doi = {10.1145/2364527.2364568},
- acmid = {2364568},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {lambda calculus, linear logic, pi calculus},
+@article{Wadler:2014,
+author = {Wadler, Philip},
+title = {Propositions as sessions},
+journal = {Journal of Functional Programming},
+volume = {24},
+issue = {Special Issue 2-3},
+month = {5},
+year = {2014},
+issn = {1469-7653},
+pages = {384--418},
+numpages = {35},
+doi = {10.1017/S095679681400001X},
+URL = {http://journals.cambridge.org/article_S095679681400001X},
 }
 @inproceedings{Mazurak:2010:LCC,
  author = {Mazurak, Karl and Zdancewic, Steve},
