--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -134,7 +134,7 @@ shift to the lambda calculus to provide a basis on which session types for
 mainstream programming languages can be studied, whilst taking advantage of
 previous proof effort and specialising only for those parts unique to the
 particular system. The framework will be heavily based on calculi developed by
-\citeauthor{Wadler:2012}~\cite{Wadler:2012} describing a relationship between
+\citeauthor{Wadler:2014}~\cite{Wadler:2014} describing a relationship between
 classical linear logic (CP) and a functional language with session types
 (GV). GV is a minimal functional language supporting linearity so I believe
 such a basis will be general enough to support reasoning about a large class
@@ -288,7 +288,7 @@ mention the identifier for the channel (in this case either, $Chan~c$ or
 $Chan~d$). However, the system does provide an attractive non-linear channel
 type which has been neglected in favour of a linear treatment of channels in
 more recent
-works~\cite{Gay:2010:LAST,Mazurak:2010:LCC,Wadler:2012}. Certainly, it is the
+works~\cite{Gay:2010:LAST,Mazurak:2010:LCC,Wadler:2014}. Certainly, it is the
 case that an aliased approach would fit better with mainstream programming
 languages and perhaps studying a similar system could offer some insights.
 
@@ -311,7 +311,12 @@ prevented from communicating across it since the focus rule requires
 maintenance of the channel type. Further, it would be undesirable to permit
 modification of a session type without guaranteeing exclusive access to the
 channel since this could lead to invalid communication e.g. trying to
-communicate on a closed channel.
+communicate on a closed channel. Additionally, a linear object is consumed
+upon being adopted and will be deallocated when its adopter's lifetime ends,
+although an alternative semantics could be defined which returned the linear
+resource to the context. Moreover, \citeauthor{Fahndrich:2002} do not provide
+operational semantics or soundness results for the ``adoption and focus'' type
+system.
 
 The Alms language~\cite{Aldrich:2009} provides a functional language with
 affine types based on linear logic. A notion of type \textit{kind} is used to
@@ -330,9 +335,7 @@ implement session types as a module using a similar approach to
 \citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST} although treating channels as
 affine rather than linearly typed. \citeauthor{Aldrich:2009} note that Alms'
 type system can support the ``adoption and focus'' system but do not specify
-details or whether any changes are necessary to their typing
-judgements. Moreover, \citeauthor{Fahndrich:2002} do not provide operational
-semantics or soundness results for the ``adoption and focus'' type system.
+details or whether any changes are necessary to their typing judgements.
 
 The work on a linear functional language with session types by
 \citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST} is the main influence for the
@@ -377,7 +380,7 @@ primitive send and receives; instead, these are encoded as linear functions.
 %% and classical extension to second-order logic by
 %% \citeauthor{Mazurak:2013:LPP}'s PhD thesis~\cite{Mazurak:2013:LPP}.
 
-\citeauthor{Wadler:2012}'s recent work~\cite{Wadler:2012} brings together a
+\citeauthor{Wadler:2014}'s recent work~\cite{Wadler:2014} brings together a
 process calculus, CP, based on the earlier work by
 \citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by
 \citeauthor{Gay:2010:LAST}. The work describes a continuation-passing style
@@ -387,7 +390,7 @@ described by $\pi$DILL~\cite{Caires:2010:STI}, apart from being classical in
 nature, the constructs for server replication are modified; CP provides a
 weakening and contraction rules whereas these are encoded in one rule for
 process reduction by \citeauthor{Caires:2010:STI}. Additionally, rather than a
-two-sided sequent calculus, \citeauthor{Wadler:2012} uses one-sided sequents
+two-sided sequent calculus, \citeauthor{Wadler:2014} uses one-sided sequents
 for defining the process calculus, which provides a more intuitive
 presentation of session type duality and clearer correspondence to a
 $\lambda$-calculi surface syntax. As presented, GV does not support all
@@ -513,7 +516,7 @@ studying programming with session types.
 %% your proposed approach is feasible, but identify any risks.
 
 I intend to mechanise the calculi described by
-\citeauthor{Wadler:2012}~\cite{Wadler:2012} using the Coq proof assistant. In
+\citeauthor{Wadler:2014}~\cite{Wadler:2014} using the Coq proof assistant. In
 the spirit of the POPLMARK challenge, I aim to utilise available libraries and
 infrastructure as much as
 possible. \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} developed a
@@ -525,7 +528,7 @@ technique for removing nonlinear contexts from typing judgements. While their
 work extended to \fpop it is not clear how to handle an environment containing
 both non-linear and linear types as in GV. I wish to maintain as close a
 relationship as possible to the paper system presented by
-\citeauthor{Wadler:2012}, so separating out the non-linear and linear
+\citeauthor{Wadler:2014}, so separating out the non-linear and linear
 components (as in \fpop) is not an option at this stage.
 
 Following \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, I use the
@@ -545,8 +548,10 @@ believe it will be straightforward to extend this notion. Unfortunately, I
 must define similar operations on CP terms and handle substitution and opening
 on them as well as propositions which can accept propositional variables. I
 hope to be able to generalise as much as possible with the help of the
-Metatheory library. Alternatively, I could have chosen a higher-order abstract
-syntax (HOAS) approach such as the parametric version (PHOAS) described
+Metatheory library.
+
+Alternatively, I could have chosen a higher-order abstract syntax (HOAS)
+approach such as the parametric version (PHOAS) described
 by~\citeauthor{Chlipala:2008:PHOAS}~\cite{Chlipala:2008:PHOAS}. PHOAS relies
 on the metalanguage (Coq, in this case) for handling binders and substitution
 so has less overhead in managing syntax than the locally nameless
@@ -562,30 +567,33 @@ excludes a finite set of variables from being considered as the binder. In
 contrast, the traditional ``exists-fresh'' approach, where the binder is only
 required to be fresh within the abstraction's body, does not produce strong
 enough induction principles in some cases. This change will necessitate
-changes to the typing rules of GV and CP. Consider for instance the connect
-with rule in GV~\cite{Wadler:2012}:
+changes to the typing rules of GV and CP. Consider for instance the Connect
+rule in GV~\cite{Wadler:2014} (Connect) and its corresponding cofinite
+quantification version (ConnectCO):
 
 ... connect with rule here ... ... connect rule using cofinite quantification
 
-The conclusion binds a variable
-
-Consider also the rule for output in CP~\cite{Wadler:2012} and its
-corresponding version used here:
+The conclusion binds a variable in Connect but a type in ConnectCO. Thus, in
+the premise for ConnectCO one can choose a suitably fresh $x$. The same change is made to the rules for CP so that, for example, output which allocates a fresh variable $y$ no longer names $y$ in the conclusion:
 
 ... output in CP ... ... version used here with cofinite quantification ...
 
-The rule here ... is this needed? What are we showing here with the different
-version?
+Since the name $y$ is assumed to be fresh in the original presentation these
+changes do not alter the typing of processes nor the semantics of the
+translation from GV to CP. An equivalence between ``exists-fresh'' and
+cofinite quantification definitions of the simply-typed $\lambda$ calculus is
+given by \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}. In general, I
+do not aim to formally prove adequacy of the mechanisation.
 
-While the aim is to be faithful to \citeauthor{Wadler:2012}'s description, I
+While the aim is to be faithful to \citeauthor{Wadler:2014}'s description, I
 may need to alter the approach slightly to avoid tricky formulations. For
-instance, instead of providing n-ary branch and choice in GV, we provide only
-binary versions of these operators to simplify the development. This change is
-not restrictive however, since CP itself provides only binary versions of plus
-($\oplus$) and with ($\with$) constructs. Likewise, on a more technical note,
-we amalgamate all types into one inductive definition and provide a predicate
-for restricting typing rules to consider only valid session
-types. \citeauthor{Wadler:2012} defines GV types as a set of mutually
+instance, instead of providing $n$-ary branch and choice in GV, we provide
+only binary versions of these operators to simplify the development. This
+change is not restrictive however, since CP itself provides only binary
+versions of plus ($\oplus$) and with ($\with$) constructs. Likewise, on a more
+technical note, I amalgamate all types into one inductive definition and
+provide a predicate for restricting typing rules to consider only valid
+session types. \citeauthor{Wadler:2014} defines GV types as a set of mutually
 recursive definitions; session types are types which may contain types as
 subcomponents (arguments to send, for example). Unfortunately, handling
 mutually inductive definitions in Coq can be quite involved; requiring one to
@@ -632,31 +640,30 @@ binders.
 
 After December, it remains to define the translation between GV and CP which I
 envisage will be the bulk of the work, requiring several rules on typing
-derivations; I envisage being able to define these as inductive datatype
-constructors but I shall take care to reuse any suitable libraries that are
-available, e.g. a library for handling CPS translations.
+derivations; I plan to define these as inductive datatype constructors but I
+shall take care to reuse any suitable libraries that are available, e.g. a
+library for handling CPS translations. For this step of the work, I allocated
+one month but this is a cautious estimate accounting some slack time for any
+delays in preceding stages of the development; I suspect this stage will not
+require a full month.
 
-As discussed previously, it would be
+For the remainder, I shall look to extend the definitions of GV and CP using
+the definitions I have provided. As discussed previously, it would be
 interesting to study a system for supporting side-effecting functions (aka
 closures) for session channels. In order to achieve this, operational
 semantics for GV would need to be defined, and the recent draft by
 \citeauthor{Lindley:2014:SPS} may provide some useful insights on how best to
-do this. 
+do this~\cite{Lindley:2014:SPS}. I allocated the remaining time (approx. two
+months) to perform this extension because I believe it requires the most
+development: extending existing definitions to handle side-effecting
+functions, defining operational semantics, proving subject reduction and
+related properties. Additionally, it will also require a theoretical treatment
+prior to undertaking the development task, in contrast to the preceding
+development work which mostly utilises results from the literature.
 
-For this step of the work, I allocated one month. For the remainder, I shall
-look to extend the definitions of GV and CP using the definitions I have
-provided
-
-I am going to look into adapting adoption and focus for the GV setting to
-allow one to control aliasing on session typed channels independent of their
-session characteristics so the aim is not to manipulate a linear type but to
-provide a nonlinear view of some resource and when changes are to be made,
-enforce some non-aliased view such that there no references in the context
-perhaps the notion I'm looking for is to prevent sending on a guarded type or
-enforce the guarded type must be preserved in the adoption block the trick in
-the adoption and focus system is that the type will be deallocated when its
-adopter's lifetime ends; I suspect in our system this is not useful since we
-will only be permitted to use a channel in a non-aliased context
+I shall review and update the above plan throughtout the project as I proceed
+to the various milestones I have set out, and whenever I identify changing
+circumstances.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
