Added Buy/Quote Client-Server example to parallel C&P's.

--- a/proposal/propmacros.tex
+++ b/proposal/propmacros.tex
@@ -17,6 +17,15 @@
 \newcommand{\CPinl}[2]{{#1}.\inlterm;{#2}}
 \newcommand{\CPinr}[2]{{#1}.\inrterm;{#2}}
 
+\newcommand{\SLoutput}[3]{(\nu{#1}){#2}\langle{#1}\rangle.{#3}}
+\newcommand{\SLinput}[3]{{#1}({#2}).{#3}}
+\newcommand{\Spar}[3]{(\nu{#1}).({#2}~|~{#3})}
+
 % SILL/CP types
 \newcommand{\BChoice}[2]{{#1}\oplus{#2}}
 \newcommand{\BBranch}[2]{{#1}\with{#2}}
+\newcommand{\1}{\mathbf{1}}
+\newcommand{\0}{\mathbf{0}}
+
+% SILL def
+\newcommand{\sdef}[2]{{#1}\triangleq{#2}}
