Missed pi symbol.

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -307,7 +307,7 @@ hand, one could imagine such a channel being setup between two communicating
 agents; the ``owner'' of the channel is largely irrelevant. Note that
 $ClientProto$ is in fact the dual of the $ServerProto$ definition by
 \citeauthor{Caires:2010:STI} using the definition of dual used in Wadler's
-classical process calculus~\cite{Wadler:2014}. In $pi$DILL, the duality
+classical process calculus~\cite{Wadler:2014}. In $\pi$DILL, the duality
 between endpoints of the same channel are obscured by the nature of the typing
 judgements.
 
