--- a/proposal/propmacros.tex
+++ b/proposal/propmacros.tex
@@ -10,25 +10,38 @@
 
 % SILL two-sided sequents
 \newcommand{\tsequent}[4]{{#1};{#2}\vdash{#3}::{#4}}
+\newcommand{\cpsequent}[2]{{#1}\vdash{#2}}
 
 % SILL/CP terms
 \newcommand{\inlterm}{\mkterm{inl}}
 \newcommand{\inrterm}{\mkterm{inr}}
 
+% GV types
+\newcommand{\Sbar}[1]{\overline{{#1}}}
+
+% GV keywords
+\newcommand{\withterm}{\mkterm{with}}
+\newcommand{\connectterm}{\mkterm{connect}}
+\newcommand{\toterm}{\mkterm{to}}
+
+% GV terms
+\newcommand{\Connect}[3]{\withterm~{#1}~\connectterm~{#2}~\toterm~{#3}}
+
 % SILL/CP syntax
 \newcommand{\CPcase}[3]{{#1}.\caseterm({#2},{#3})}
 \newcommand{\CPinl}[2]{{#1}.\inlterm;{#2}}
 \newcommand{\CPinr}[2]{{#1}.\inrterm;{#2}}
-
 \newcommand{\SLoutput}[3]{(\nu{#1}){#2}\langle{#1}\rangle.{#3}}
 \newcommand{\SLinput}[3]{{#1}({#2}).{#3}}
 \newcommand{\Spar}[3]{(\nu{#1}).({#2}~|~{#3})}
+\newcommand{\CPoutput}[4]{{#1}[{#2}].({#3}~|~{#4})}
 
 % SILL/CP types
 \newcommand{\BChoice}[2]{{#1}\oplus{#2}}
 \newcommand{\BBranch}[2]{{#1}\with{#2}}
 \newcommand{\1}{\mathbf{1}}
 \newcommand{\0}{\mathbf{0}}
+\newcommand{\oend}{\mathsf{end_!}}
 
 % SILL def
 \newcommand{\sdef}[2]{{#1}\triangleq{#2}}
